<resources>
  <string name="end_flight">End Flight</string>
  <string name="airmap_phone_number_disclaimer">By providing your number, you agree to receive texts about your flights at this number. Carrier message &amp; data rates may apply.

AirMap will send you a text message when your digital notice has been successfully submitted.
</string>
  <string name="airmap_digital_notice_accepted">Digital Notice Accepted</string>
  <string name="phone_number_verification">Phone Number Verification</string>
  <string name="submit">Submit</string>
  <string name="permits">Permits</string>
  <string name="select_aircraft">Select Aircraft</string>
  <string name="accepts_digital_notice">Accepts Digital Notice</string>
  <string name="no_known_number">No Phone Number Provided</string>
  <string name="advisory_tfr_ends_format">Ends: %1$s</string>
  <string name="advisory_tfr_permanent">Permanent</string>
  <string name="airmap_starts">Starts: %1$s</string>
  <string name="advisory_wildfire_size_format_acres">%$1@ Acres</string>
  <string name="advisory_wildfire_size_format_hectares">%$1@ Hectares</string>
  <string name="unknown_size">Size Unknown</string>
  <string name="aircraft_select_aircraft">Select Aircraft</string>
  <string name="airmap_title_activity_create_aircraft">Create Aircraft</string>
  <string name="airmap_edit_aircraft">Update Aircraft</string>
  <string name="airmap_flights">Flights</string>
  <string name="airmap_pilot_information">Pilot Information</string>
  <string name="airmap_title_activity_custom_properties">Custom Properties</string>
  <string name="login">Login</string>
  <string name="airspace_type_aerial_rec_area">Aerial Recreational Area</string>
  <string name="airspace_type_airport">Airport</string>
  <string name="airspace_type_city">City</string>
  <string name="airspace_type_controlled">Controlled Airspace</string>
  <string name="airspace_type_custom">Custom</string>
  <string name="airspace_type_hazard_area">Hazard Area</string>
  <string name="airspace_type_heliport">Heliport</string>
  <string name="airspace_type_hospital">Hospital</string>
  <string name="airspace_type_national_park">National Park</string>
  <string name="airspace_type_power_plant">Power Plant</string>
  <string name="airspace_type_prison">Prison</string>
  <string name="airspace_type_school">School</string>
  <string name="airspace_type_special_use">Special Use Airspace</string>
  <string name="airspace_type_stadium">Stadium</string>
  <string name="airspace_type_tfr_faa">Temporary Flight Restriction</string>
  <string name="airspace_type_university">University</string>
  <string name="airspace_type_wildfire">Wildfire</string>
  <string name="invalid_email_domain">Your account has been blacklisted. Please contact security@airmap.com</string>
  <string name="verify_email_log_in_again">Your email address needs to be verified. Please check your inbox.</string>
  <string name="auth_error_unauthorized">Unauthorized</string>
  <string name="auth_failed_login_title">Alert</string>
  <string name="available_permits">Available Permits</string>
  <string name="existing_permits">Existing Permits</string>
  <string name="unavailable_permits">Unavailable Permits</string>
  <string name="select_a_permit_description">The following existing &amp; available permits meets the requirements for operation in the flight area.</string>
  <string name="no_available_permits_for_flight">Only a single permit can be used to fly in this operating area. Your flight path intersects with multiple areas requiring different permits.</string>
  <string name="single_use">Single use</string>
  <string name="available_permit_row_title_validity">Valid for</string>
  <string name="available_permit_row_value_single_use_false">No</string>
  <string name="available_permit_row_value_single_use_true">Yes</string>
  <string name="available_permit_section_header_custom_properties">Form Fields (* Required)</string>
  <string name="description">Description</string>
  <string name="permit_details">Details</string>
  <string name="airmap_nickname">Nickname</string>
  <string name="call">Call</string>
  <string name="cardinal_direction_e">E</string>
  <string name="cardinal_direction_ene">ENE</string>
  <string name="cardinal_direction_ese">ESE</string>
  <string name="cardinal_direction_n">N</string>
  <string name="cardinal_direction_ne">NE</string>
  <string name="cardinal_direction_nnne">NNE</string>
  <string name="cardinal_direction_nnw">NNW</string>
  <string name="cardinal_direction_nw">NW</string>
  <string name="cardinal_direction_s">S</string>
  <string name="cardinal_direction_se">SE</string>
  <string name="cardinal_direction_sse">SSE</string>
  <string name="cardinal_direction_ssw">SSW</string>
  <string name="cardinal_direction_sw">SW</string>
  <string name="cardinal_direction_w">W</string>
  <string name="cardinal_direction_wnw">WNW</string>
  <string name="cardinal_direction_wsw">WSW</string>
  <string name="tooltip_placeholder">[Tooltip informational stuff goes here.
Line two details would be here.]</string>
  <string name="do_you_want_to_call">Do you want to call %1$s?</string>
  <plurals name="duration_in_hours">
    <item quantity="one">%1$s hour</item>
    <item quantity="other">%1$s hours</item>
  </plurals>
  <string name="duration_in_minutes">%1$d mins</string>
  <string name="starts">Starts</string>
  <string name="email_verification_required">Email Verification Required</string>
  <string name="enter_verification_token">Enter the verification token that was sent to your phone number</string>
  <string name="error_creating_flight">Error creating flight</string>
  <string name="error_generic_format">The server returned an error. (%s)</string>
  <string name="error_getting_mfrs">Error getting manufacturers</string>
  <string name="error_getting_permit">Error getting permit</string>
  <string name="error_getting_profile">Error getting profile</string>
  <string name="error_getting_wallet">Error getting Permit Wallet</string>
  <string name="error_models_for_mfrs">Error retrieving models for selected manufacturer</string>
  <string name="error_resending_email">Error re-sending verification email</string>
  <string name="error_serialization">The server returned an unprocessible response.</string>
  <string name="error_server">The server could not complete your request.</string>
  <string name="error_unauthorized">Unauthorized. Please check login credentials.</string>
  <string name="error_updating_profile">Error updating profile</string>
  <string name="error_verifying_number">Error verifying number</string>
  <string name="flight_data_cell_button_done">DONE</string>
  <string name="now">Now</string>
  <string name="airmap_buffer">Radius</string>
  <string name="airmap_done_drawing_tip">Drag any point to move. Drag any midpoint to add a new point.</string>
  <string name="airmap_delete_tip">Drag point to trash to delete</string>
  <string name="airmap_draw_freehand_area">Draw a freehand area</string>
  <string name="airmap_draw_freehand_path">Draw a freehand path</string>
  <string name="flight_drawing_tooltip_cta_postiion_point">Drag the center point to position your flight area.</string>
  <string name="airmap_freehand_tip_area">Tap the hand icon to freehand draw any area.</string>
  <string name="airmap_freehand_tip_path">Tap the hand icon to freehand draw any path.</string>
  <string name="airmap_flight_area_overlap_permit_conflict">Flight area cannot overlap with conflicting permit requirement zones.</string>
  <string name="airmap_error_overlap">Invalid flight area. Adjust flight area so that it does not overlap with itself.</string>
  <string name="airmap_width">Width</string>
  <string name="airmap_next">Next</string>
  <string name="airmap_save">Save</string>
  <string name="flight_plan_row_title_aircraft">Select Aircraft</string>
  <string name="airmap_max_altitude">Altitude</string>
  <string name="airmap_duration">Duration</string>
  <string name="select_pilot_profile">Select Pilot Profile</string>
  <string name="flight_plan_row_title_start_time">Starts</string>
  <string name="pilot_and_aircraft_header">Pilot &amp; Aircraft</string>
  <string name="flight_details">Flight</string>
  <string name="airmap_share_my_flight">Share My Flight</string>
  <string name="date_and_time">Date &amp; Time</string>
  <string name="free">Free</string>
  <string name="airmap_circle">Point</string>
  <string name="you_have_selected_permits_of_total_required">Operating in this flight area requires a permit from each of the following authorities:</string>
  <string name="airmap_title_activity_create_flight">Create Flight</string>
  <string name="airmap_path">Path</string>
  <string name="done">Done</string>
  <string name="learn_more">Learn More</string>
  <string name="airmap_not_accept_notice">The following authorities in this area do not accept digital notice</string>
  <string name="na">N/A</string>
  <string name="no_dialer_found">No dialer found on device</string>
  <string name="only_schedule_present_future">You can only schedule flights for the present or future</string>
  <string name="tooltip_placeholder_2">[Tooltip informational stuff goes here.
Line two details would be here.]</string>
  <string name="permit_status">Status: %1$s</string>
  <string name="select_a_permit">Select Permit</string>
  <string name="phone_country_section_other_country">Other</string>
  <string name="phone_country_section_selected_country">Selected Country</string>
  <string name="pilot_permit_expiration_format">Expires %$1@</string>
  <string name="pilot_profile_faa_registration">FAA Registration Number</string>
  <string name="email">Email</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="pilot_profile_label_phone">Phone</string>
  <string name="pilot_profile_label_username">Username</string>
  <string name="pilot_profile_section_additional">Additional Info</string>
  <string name="airmap_personal_information">Personal Info</string>
  <string name="pilot_profile_statistics_format">%1$s Aircraft, %2$s Flights</string>
  <string name="price_label">Price:\t\t</string>
  <string name="airmap_title_activity_profile">Pilot Profile</string>
  <string name="read_full_rules">Read Full Rules</string>
  <string name="required_field">This is a required field</string>
  <string name="required_field_must_be_complete">All required fields must be completed to proceed.</string>
  <string name="airmap_select_different_permit">Select a different permit</string>
  <string name="airmap_select_a_permit">Select permit</string>
  <string name="resend_email">Resend Email</string>
  <string name="retry">Retry</string>
  <string name="review_flight_plane_title">Flight Plan</string>
  <string name="review_flight_plan_details_public_flight_value_true">Yes</string>
  <string name="review_flight_plan_details_radius">Radius</string>
  <string name="airmap_aircraft_stats">Aircraft</string>
  <string name="review_flight_plan_details_row_title_altitude">Altitude</string>
  <string name="review_flight_plan_details_row_title_duration">Ends</string>
  <string name="review_flight_plan_details_row_title_ends">Ends</string>
  <string name="review_flight_plan_details_row_title_public">Public</string>
  <string name="review_flight_plan_details_row_title_starts">Starts</string>
  <string name="review_flight_plan_details_section_header_aircraft">Aircraft</string>
  <string name="review_flight_plan_details_section_header_details">Details</string>
  <string name="review_flight_plan_details_section_header_social">Share My Flight</string>
  <string name="review_flight_plan_details_start_time_now">Now</string>
  <string name="review_flight_plan_notices_tab_accepts_notice">Accepts Digital Notice</string>
  <string name="airmap_select_permit">Select Permit</string>
  <string name="validity_label">Validity:\t</string>
</resources>