<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/date_and_time"
        android:textColor="@color/font_white"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/date_time_picker_touch_target"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:textColor="@color/colorAccent"
            android:text="@string/starts" />

        <TextView
            android:id="@+id/time_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/duration_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:textColor="@color/colorAccent"
            android:text="@string/airmap_duration" />

        <TextView
            android:id="@+id/duration_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/duration_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

    </LinearLayout>

    <LinearLayout android:id="@+id/altitude_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/flight_details"
            android:textColor="@color/font_white"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" >

            <TextView
                android:id="@+id/altitude_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:textColor="@color/colorAccent"
                android:text="@string/airmap_max_altitude" />

            <TextView
                android:id="@+id/altitude_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/altitude_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/pilot_and_aircraft_header"
        android:textColor="@color/font_white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/pilot_profile_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:drawableRight="@drawable/ic_edit"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColor="@color/colorAccent"
        android:text="@string/select_pilot_profile" />

    <TextView
        android:id="@+id/aircraft_label"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:drawableRight="@drawable/ic_edit"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColor="@color/colorAccent"
        android:text="@string/select_aircraft" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/rules_and_flight_features_header"
        android:textColor="@color/font_white"
        android:textSize="12sp" />

</LinearLayout>