<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:theme="@style/Theme.AppCompat">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:background="@color/colorPrimary">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/select_permit_button">

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:context=".ui.fragments.EnterPermitDetailsFragment">

                <TextView
                        android:id="@+id/description_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_title"
                        android:textSize="18sp"
                        android:text="@string/description"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                        android:id="@+id/description_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Lorem Ipsum Dolor Sit Amet"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginRight="16dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/description_label"/>


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_title"
                        android:textSize="18sp"
                        android:text="@string/validity_label"
                        android:layout_marginLeft="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:id="@+id/textView"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/description_text"
                        android:layout_marginStart="16dp"/>

                <TextView
                        android:id="@+id/validity"
                        android:layout_width="261dp"
                        android:layout_height="22dp"
                        android:textSize="18sp"
                        android:textColor="@color/font_title"
                        tools:text="1 hour"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                        app:layout_constraintLeft_toRightOf="@+id/textView"
                        android:layout_marginLeft="8dp"/>


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_title"
                        android:textSize="18sp"
                        android:text="@string/price_label"
                        tools:layout_conversion_absoluteX="16dp"
                        tools:layout_conversion_absoluteY="235dp"
                        tools:layout_conversion_absoluteWidth="53dp"
                        tools:layout_conversion_absoluteHeight="21dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:id="@+id/textView2"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"/>

                <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_title"
                        android:textSize="18sp"
                        tools:text="Free"
                        tools:layout_conversion_absoluteX="69dp"
                        tools:layout_conversion_absoluteY="235dp"
                        tools:layout_conversion_absoluteWidth="35dp"
                        tools:layout_conversion_absoluteHeight="21dp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                        app:layout_constraintLeft_toRightOf="@+id/textView2"
                        android:layout_marginLeft="8dp"/>


                <!--<TextView-->
                <!--android:id="@+id/fields_label"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:textColor="@color/font_title"-->
                <!--android:textSize="18sp"-->
                <!--android:text="Fields (* required)"/>-->

                <LinearLayout
                        android:id="@+id/custom_properties_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <Button
                android:id="@+id/select_permit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/airmap_select_permit"
                android:layout_alignParentBottom="true"/>

        <FrameLayout
                android:id="@+id/progress_bar_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#b8000000"
                tools:visibility="gone">

            <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    style="@style/Base.Widget.AppCompat.ProgressBar"/>

        </FrameLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>